# carpet

./: Cargo.toml
src/: components.rs  components_int.rs  config.rs  main.rs  sound.rs  sound_category.rs  sounds.rs
src/frontend/: category.rs  mod.rs  prelude.rs  slider.rs  sound.rs
src/sounds/: control.rs  looper.rs  mod.rs  register.rs  sound.rs
