[package]
name = "carpet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[features]
x11 = ["freya/x11"]
wireframe = ["freya/wireframe"]

[dependencies]
lazy_static = "1.4.0"
rodio = "0.15.0"

# New UI dependancies
dioxus = { git = "https://github.com/marc2332/dioxus", branch = "feat/attribute-value-any", features = [
    "macro",
    "hooks",
] }
freya-elements = { git = "https://github.com/marc2332/freya" }
freya = { git = "https://github.com/marc2332/freya" }
freya-components = { git = "https://github.com/marc2332/freya" }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MacOS only rust dependencies
[target.'cfg(target_os = "macos")'.dependencies]
home = "0.5"

# Linux only rust dependancies:
[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.4"

# Rodio or one of its dependancies will not play sound unless it is built in
# release mode.
[profile.dev.package."*"]
opt-level = 3
