[package]
name = "carpet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
lazy_static = "1.4.0"
rodio = "0.15.0"

# New UI dependancies
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="49c5a5043a16fc82210af146c345793dd448e519", features = ["macro", "hooks"]}
freya-node-state = { git="https://github.com/marc2332/freya", rev="ca14282f4aa9af8c68b4d5911beff1960281f147"}
freya = { git="https://github.com/marc2332/freya", rev="ca14282f4aa9af8c68b4d5911beff1960281f147" }
freya-common = { git="https://github.com/marc2332/freya", rev="ca14282f4aa9af8c68b4d5911beff1960281f147" }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MacOS only rust dependencies
[target.'cfg(target_os = "macos")'.dependencies]
home = "0.5"

# Linux only rust dependancies:
[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.4"

# Rodio or one of its dependancies will not play sound unless it is built in
# release mode.
[profile.dev.package."*"]
opt-level = 3
